# pico-stats-display

./: CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/BME_280/: CMakeLists.txt  bme280_spi.c  bme280_spi.h
lib/EPD_1in54_V2/: CMakeLists.txt  EPD_1in54_V2.c  EPD_1in54_V2.h
lib/Fonts/: fonts.h
lib/GUI/: CMakeLists.txt
